@@ -4,7 +4,8 @@
 	* lib/variables.mk,
 	* sdcc-build-bootstrap.sh: put local tools in ~/local-$HOSTNAME
 	* sdcc-build-bootstrap.sh: use "svn checkout" instead "svn export"
-	because there's enough space and it makes administration easier
+	because there's enough space and it makes administration easier,
+	simplify co of sdcc-build
 
 2006-01-24 Bernhard Held <bernhard AT bernhardheld.de>
 
